# language-server

./: .gitignore  .gitmodules  readme.md
.github/workflows/: cmake-multi-platform.yml
JsonRPC/JsonRPC/: jsonrpc.h  languageserver.h  main.cpp  uri.h
clients/vscode/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  package.nls.de.json  package.nls.json  publish.cmd
clients/vscode/assets/icons/: ReadMe.md  icon-theme.json
clients/vscode/grammar/: cppext.configuration.json  cppext.gram.json  sqc.configuration.json  sqc.gram.json  sqf.configuration.json  sqf.min.json
clients/vscode/sample/: #19.sqf  $PBOPREFIX$  L-0002.sqf  compilation_test.sqc  compilation_test.sqf  config.cpp  detachable_scope.sqf  double-foreach.sqf  example.sqc  example.sqf  get_after_nested_set.sqf  hide_variable.sqf  include.h  included_sqf_file.txt  including_sqf_file.sqf  magic_variables.sqf  needless_brackets.sqf  new_file_3.sqf  new_file_4.sqf  new_file_5.sqf  pragma_disable_line.sqf  private_declarations.sqf  reference_cross_1.sqf  reference_cross_2.sqf  sample.sqf  scope_check.sqf
clients/vscode/sample/deref-pboprefix-include/: deref.hpp  deref.sqf
clients/vscode/sample/hide-include-warning/: file.sqf  include.hpp
clients/vscode/sample/tickets/: 24.sqf  32.sqf  55.sqf  57.sqf
clients/vscode/src/: extension.ts
clients/vscode/src/commands/: align_equals.ts  open_rpt.ts  open_selected.ts
clients/vscode/src/utils/: engine.ts
server/: CMakeLists.txt  CMakePresets.json  ReadMe.md  git_sha1.cpp  sample.sqlite  vcpkg.json
server/.run/: sqfvm_language_server.run.xml
server/sqfvm_language_server/: CMakeLists.txt  analyzer.hpp  file_system_watcher.cpp  file_system_watcher.hpp  git_sha1.h  language_server.cpp  language_server.hpp  language_server.logic.cpp  language_server.lsp.cpp  lspserver.hpp  lspsqf.cpp  lspsqf.hpp  main.cpp  main.hpp  runtime_logger.hpp  sqf-vm-language-server.cpp  sqfanalyzer.cpp  sqfanalyzer.hpp  sqfvm_factory.cpp  sqfvm_factory.hpp  sqlite.cpp  sqlite.hpp  uri.hpp  util.hpp
server/sqfvm_language_server/analysis/: analyzer.hpp  db_analyzer.hpp  file_analyzer.hpp  slspp_context.cpp  slspp_context.hpp  sqfvm_analyzer.cpp  sqfvm_analyzer.hpp
server/sqfvm_language_server/analysis/assembly/: assembly_analyzer.cpp  assembly_analyzer.hpp
server/sqfvm_language_server/analysis/config_ast/: ast_visitor.hpp  cfg_ast_analyzer.cpp  cfg_ast_analyzer.hpp  config_ast_analyzer.cpp  config_ast_analyzer.hpp
server/sqfvm_language_server/analysis/config_ast/visitors/: general_visitor.cpp  general_visitor.hpp
server/sqfvm_language_server/analysis/sqf/: sqf_analyzer.cpp  sqf_analyzer.hpp
server/sqfvm_language_server/analysis/sqf_ast/: ast_visitor.hpp  sqf_ast_analyzer.cpp  sqf_ast_analyzer.hpp
server/sqfvm_language_server/analysis/sqf_ast/visitors/: general_visitor.cpp  general_visitor.hpp  scripted_visitor.cpp  scripted_visitor.documentation.md  scripted_visitor.hpp  variables_visitor.cpp  variables_visitor.hpp
server/sqfvm_language_server/analyzers/: analyzer.hpp  severity.hpp  strmtch.hpp
server/sqfvm_language_server/analyzers/sqf/: analyzer_sqf.cpp  analyzer_sqf.hpp
server/sqfvm_language_server/analyzers/sqf/visitors/sqf/: variables_visitor.hpp
server/sqfvm_language_server/database/: context.cpp  context.hpp  database.cpp  database.h  orm_mappings.hpp  sqlite.cpp  sqlite.hpp
server/sqfvm_language_server/database/migration/: migrator.hpp  v0.cpp
server/sqfvm_language_server/database/repositories/: repositories.hpp  t_file.hpp  t_files.hpp  t_variable.hpp
server/sqfvm_language_server/database/tables/: t_code_action.h  t_code_action_change.h  t_diagnostic.h  t_file.h  t_file_history.h  t_file_include.h  t_hover.h  t_reference.h  t_scope.h  t_variable.h
server/sqfvm_language_server/lsp/: jsonrpc.hpp  lspserver.cpp  lspserver.hpp  server.cpp  server.hpp
server/sqfvm_language_server/lsp/data/: enums.hpp
server/sqfvm_language_server/migration/: migrator.hpp  v0.cpp  v1.cpp
server/sqfvm_language_server/old/analyzers/: analyzer.hpp  analyzer_result.hpp  argument.hpp  lintinfo.hpp  method.hpp  position.hpp  variable_scope.hpp  variable_type.hpp
server/sqfvm_language_server/old/analyzers/sqf/: analyzer_sqf.cpp  analyzer_sqf.hpp  ast_visitor.hpp  sqfvisitor.hpp
server/sqfvm_language_server/old/analyzers/sqf/visitors/sqf/: variables_visitor.hpp
server/sqfvm_language_server/old/database/: sqlite.cpp
server/sqfvm_language_server/old/database/migration/: migrator.hpp  v0.cpp  v1.cpp
server/sqfvm_language_server/old/database/repositories/: repository_macros.h  t_file.hpp  t_reference.hpp  t_variable.hpp
server/sqfvm_language_server/old/vscode/: jsonrpc.hpp  lspserver.hpp  lspsqf.hpp
server/sqfvm_language_server/repositories/: t_files.hpp
server/sqfvm_language_server/visitors/sqf/: get_variables_visitor.hpp  variables_visitor.hpp
server/sqfvm_language_server/vscode/: jsonrpc.hpp  lspserver.hpp  lspsqf.cpp  lspsqf.hpp
server/src/: jsonrpc.h  language_server_logger.cpp  language_server_logger.h  languageserver.h  lspserver.h  main.cpp  sqf_language_server.cpp  sqf_language_server.h  text_document.cpp  text_document.h  uri.h  util.h  variable_declaration.h
server/tools/schema2cpp/: Program.cs  SchemaToCpp.cs
vscode-package/: package-lock.json  package.json
vscode-package/src/: extension.ts
